--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,23 @@
   <name>ecocrewUserAPP</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
+  
+  
+  
+  <profiles>
+  <profile>
+    <id>test</id>
+    <activation>
+      <activeByDefault>false</activeByDefault>
+    </activation>
+    <properties>
+      <env>test</env>
+    </properties>
+  </profile>
+</profiles>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.release>17</maven.compiler.release>
-  </properties>
+
+
 
   <dependencyManagement>
     <dependencies>
